src/objects/Payment__c/fields/Custom_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_1__c</fullName>
    <label>Custom 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>