src/objects/Payment__c/fields/Custom_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_2__c</fullName>
    <label>Custom 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>