src/objects/Payment__c/fields/Custom_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_3__c</fullName>
    <label>Custom 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>