src/objects/Payment__c/fields/Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Key__c</fullName>
    <label>Transaction Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>