src/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Customer_Id__c</columns>
    <columns>Email__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Number__c</columns>
    <columns>Subscription__c</columns>
    <columns>Transaction_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>